[gd_scene load_steps=12 format=2]

[ext_resource path="res://hud/Hud.gd" type="Script" id=1]
[ext_resource path="res://hud/LblScore.tscn" type="PackedScene" id=2]
[ext_resource path="res://hud/LblLevel.tscn" type="PackedScene" id=3]
[ext_resource path="res://hud/score.tres" type="Theme" id=4]
[ext_resource path="res://hud/LabelsScreen.tscn" type="PackedScene" id=5]
[ext_resource path="res://hud/VSLabelsScreen.tscn" type="PackedScene" id=6]
[ext_resource path="res://hud/GameOverScreen.tscn" type="PackedScene" id=7]
[ext_resource path="res://hud/PauseScreen.tscn" type="PackedScene" id=8]
[ext_resource path="res://hud/Blind.tscn" type="PackedScene" id=9]

[sub_resource type="InputEventKey" id=1]

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[node name="Hud" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="LblScore" parent="." instance=ExtResource( 2 )]
margin_right = -16.0
margin_bottom = 36.0
text = "0"

[node name="LblLevel" parent="." instance=ExtResource( 3 )]

[node name="LblRemains" type="Label" parent="."]
visible = false
margin_left = 314.0
margin_top = 106.0
margin_right = 328.0
margin_bottom = 340.0
size_flags_horizontal = 2
size_flags_vertical = 0
theme = ExtResource( 4 )
text = "b
l
o
c
k
s
 
5
0"
align = 1
uppercase = true

[node name="LabelsScreen" parent="." instance=ExtResource( 5 )]

[node name="VSLabelsScreen" parent="." instance=ExtResource( 6 )]

[node name="GameOverScreen" parent="." instance=ExtResource( 7 )]
visible = false

[node name="PauseScreen" parent="." instance=ExtResource( 8 )]
visible = false

[node name="BlindLeft" parent="." instance=ExtResource( 9 )]
visible = false
position = Vector2( 157, 70 )

[node name="BlindRight" parent="." instance=ExtResource( 9 )]
visible = false
position = Vector2( 482, 70 )

[node name="BtnPause" type="Button" parent="."]
margin_left = 16.0
margin_top = 16.0
margin_right = 74.0
margin_bottom = 36.0
size_flags_horizontal = 2
size_flags_vertical = 2
theme = ExtResource( 4 )
shortcut_in_tooltip = false
shortcut = SubResource( 2 )
text = "Pause"
align = 0

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
[connection signal="pressed" from="BtnPause" to="." method="_on_BtnPause_pressed"]
